--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,14 @@ buildscript {
         classpath('com.moowork.gradle:gradle-node-plugin:0.4')
         classpath('com.moowork.gradle:gradle-grunt-plugin:0.5')
         classpath('be.filipblondeel.gradle:gradle-gulp-plugin:0.1')
+        classpath 'org.springframework:springloaded:1.2.0.RELEASE'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'spring-boot'
+apply plugin: 'idea'
 
 apply from: 'yeoman.gradle'
 
@@ -135,4 +137,11 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core', version:'1.9.5'
     testCompile group: 'com.mattbertolini', name: 'liquibase-slf4j', version: liquibase_slf4j_version
     testCompile group: 'org.hamcrest', name: 'hamcrest-library', version:'1.3'
+}
+
+idea {
+    module {
+        inheritOutputDirs = false
+        outputDir = file("$buildDir/classes/main/")
+    }
 }
