--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     compile group: 'org.liquibase', name: 'liquibase-core', version: liquibase_core_version
     compile(group: 'org.liquibase.ext', name: 'liquibase-hibernate4', version: liquibase_hibernate_version) {
         exclude(module: 'hibernate-jpa-2.0-api')
+        exclude(module: 'liquibase-core')
     }
     compile group: 'org.springframework.boot', name: 'spring-boot-actuator', version: spring_boot_version
     compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: spring_boot_version
